# ChessProject

./: CMakeLists.txt  LICENSE  README.md
assets/shaders/: fragmentShader.glsl  vertexShader.glsl
assets/textures/pixelChessPieces/: LICENSE.md
include/: Shader.hpp  Sprite.hpp  Texture.hpp  Window.hpp  pch.hpp
src/: Shader.cpp  Sprite.cpp  Texture.cpp  Window.cpp  main.cpp
vendors/glad/: CMakeLists.txt  LICENSE.md
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/stb/: CMakeLists.txt
